--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     
     </div>
     <div class="container">
-        <button type="button" class="btn btn-primary" id="btn"><a href="contact.html">Contact Me</a> </button>
+        <button type="button" class="btn btn-primary" id="btn"><a href="contact.html" style ='color:aliceblue;'>Contact Me</a> </button>
     </div>
    </section><br>
     </main>
